# indexmaker-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy-server.sh  docker-compose.yml
data/: assets-full.json  schema-v2.json
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251117_000001_tokens_index.rs  m20251118_000001_add_index_fields.rs  m20251119_000001_create_blockchain_events.rs  m20251119_000002_create_daily_prices.rs  m20251124_000001_create_historical_prices.rs  m20251124_000002_create_subscriptions.rs  m20251125_000001_add_index_rebalancing_fields.rs  m20251125_000002_create_coingecko_categories.rs  m20251127_000001_create_crypto_listings.rs  m20251127_000002_create_announcements.rs  m20251127_000003_create_rebalances.rs  m20251127_000004_create_category_membership.rs  m20251201_000001_create_listing_views.rs  m20251203_000001_create_index_constituents.rs  m20251204_000001_index_add_deployment_data.rs  m20251205_000001_add_symbol_to_category_membership.rs  m20251208_000001_create_market_cap_rankings.rs  m20251209_000001_create_coins_table.rs  m20251210_000001_add_active_column_to_coins.rs  m20251210_000002_create_coins_historical_prices.rs  m20251216_000001_add_coins_historical_prices_indexes.rs  m20251217_000001_drop_old_historical_prices.rs  m20251217_000002_add_weight_strategy.rs  m20251218_000001_add_blacklisted_categories.rs  m20251218_000002_drop_token_metadata.rs  m20251218_000003_add_logo_address_to_coins.rs  m20251218_000004_drop_token_ids_from_index_metadata.rs  m20260111_000001_add_constituent_strategy.rs  m20260113_000001_add_top_x_to_index_metadata.rs  m20260113_000002_add_skip_backfill.rs  m20260114_000001_create_keeper_claimable_data.rs  m20260116_000001_create_itp_price_history.rs  m20260116_000002_create_itps.rs  m20260117_000001_create_sync_status.rs  m20260126_000001_add_admin_address_to_itps.rs  m20260126_000002_create_operations.rs
scripts/: sync_itps.sql
src/: lib.rs  main.rs
src/entities/: announcements.rs  blockchain_events.rs  category_membership.rs  coingecko_categories.rs  coins.rs  coins_historical_prices.rs  crypto_listings.rs  daily_prices.rs  historical_prices.rs  index_constituents.rs  index_metadata.rs  itp_price_history.rs  itps.rs  keeper_claimable_data.rs  market_cap_rankings.rs  mod.rs  operations.rs  prelude.rs  rebalances.rs  subscriptions.rs  sync_status.rs  token_metadata.rs
src/handlers/: asset.rs  blockchain_event.rs  category.rs  deposit.rs  health.rs  historical.rs  index.rs  index_maker.rs  itp.rs  itp_history.rs  itp_listing.rs  itp_rebalances.rs  keeper_charts.rs  market_cap.rs  mod.rs  operations_ws.rs  orderbook.rs  orderbook_ws.rs  pairs.rs  subscription.rs  token.rs  transaction.rs
src/jobs/: all_coingecko_coins_sync.rs  all_coins_sync.rs  announcement_scraper.rs  bitget_historical_prices_sync.rs  category_membership_sync.rs  category_sync.rs  coins_historical_prices_sync.rs  coins_logo_sync.rs  historical_prices_sync.rs  index_daily_prices_sync.rs  itp_chain_discovery_sync.rs  itp_price_downsampler_job.rs  itp_price_snapshot_sync.rs  keeper_chart_sync.rs  market_cap_sync.rs  mod.rs  rebalance_sync.rs
src/models/: asset.rs  blockchain_event.rs  category.rs  deposit.rs  historical.rs  index.rs  index_maker.rs  itp.rs  itp_history.rs  itp_listing.rs  market_cap.rs  mod.rs  operation.rs  orderbook.rs  pairs.rs  subscription.rs  token.rs  transaction.rs
src/scrapers/: binance.rs  bitget.rs  coin_resolver.rs  mod.rs  parser.rs
src/services/: bitget_websocket.rs  bitget_ws_feeder.rs  category_service.rs  coingecko.rs  constituent_selector.rs  daily_prices.rs  exchange_api.rs  itp_chain_discovery.rs  itp_creation.rs  itp_listing.rs  itp_price_downsampler.rs  itp_price_snapshot.rs  live_orderbook_cache.rs  market_cap.rs  mod.rs  orbit_keeper.rs  orderbook.rs  orderbook_aggregator.rs  price_utils.rs  realtime_prices.rs  rebalancing.rs  sync_status.rs  weight_calculator.rs
tests/: pairs_integration_tests.rs
tests/common/: mod.rs
