[package]
name = "indexmaker-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Decimal arithmetic
rust_decimal = "1"
rust_decimal_macros = "1"

# SeaORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Environment
dotenvy = "0.15"

# Data/Time handling
chrono = { version = "0.4", features = ["serde"]}

# Add migration as a dependency
migration = { path = "migration" }

scraper = "0.24"
regex = "1.10"
lazy_static = "1.4"