[package]
name = "indexmaker-backend"
version = "0.1.0"
edition = "2024"


[lib]
name = "indexmaker_backend"
path = "src/lib.rs"

[[bin]]
name = "indexmaker-backend"
path = "src/main.rs"

[[bin]]
name = "import_tokens_historical_prices"
path = "src/bin/import_tokens_historical_prices.rs"

[[bin]]
name = "import_announcements_listings"
path = "src/bin/import_announcements_listings.rs"

[[bin]]
name = "coins_historical_prices_coingecko_fetch"
path = "src/bin/coins_historical_prices_coingecko_fetch.rs"

[[bin]]
name = "fill_deployed_index_data"
path = "src/bin/fill_deployed_index_data.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Decimal arithmetic
rust_decimal = "1"
rust_decimal_macros = "1"

# SeaORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Environment
dotenvy = "0.15"

# Data/Time handling
chrono = { version = "0.4", features = ["serde"]}

# Ethereum/blockchain
alloy = { version = "0.6", features = ["providers", "contract", "sol-types", "json", "signers", "signer-local", "rpc-types"] }

# Async
async-trait = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Concurrent data structures
parking_lot = "0.12"

# Add migration as a dependency
migration = { path = "migration" }

scraper = "0.24"
regex = "1.10"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"

[dev-dependencies]
axum-test = "16.3"
http-body-util = "0.1"
