[package]
name = "indexmaker-mcp-server"
version = "0.1.0"
edition = "2024"
description = "MCP server for ITP deployment via indexmaker backend"
authors = ["IndexMaker Team"]

[dependencies]
# MCP protocol - official Rust SDK (using version compatible with examples)
rmcp = { version = "0.3", features = ["server", "transport-io"] }

# JSON Schema generation for tool parameters
schemars = "1.0"

# HTTP client for backend API calls
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

[[bin]]
name = "indexmaker-mcp-server"
path = "src/main.rs"
